name:                music
version:             0.0.1.0
synopsis:            Simple Music API
description:         Music API
homepage:            http://github.com/githubuser/music#readme
license:             MIT
license-file:        LICENSE
author:              Apfelsinchen Ritter
maintainer:          ushfnuk@gmail.com
copyright:           2016 Apfelsinchen Ritter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable music
  other-modules:       API
                     , Config
                     , Handlers
                     , Types
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , data-default
                     , either
                     , random
                     , safe
                     , servant
                     , servant-client
                     , text
                     , transformers
                     , wai
  ghc-options:         -Wall -O2 -threaded
